# bigi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ide/: bigi_cec1302.asm  bigi_cec1302.c  bigi_cec1302.emcl  bigi_cec1302.hex  bigi_cec1302.mcpar  bigi_cec1302.mcpar_callertable.txt  bigi_cec1302_callertable.txt  remove-us-please
include/: bigi.h  bigi_io.h
src/: CMakeLists.txt  bigi.c  bigi_impl.h  bigi_io.c  bigi_io_impl.h
